--- a/package.json
+++ b/package.json
@@ -14,9 +14,32 @@
 	"author": "Edgar Chavero <edieveg316@gmail.com> (https://www.linkedin.com/in/edgar-chavero/)",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/express": "^4.17.21",
 		"@types/node": "^20.11.26",
-		"nodemon": "^3.1.0"
+		"nodemon": "^3.1.0",
+		"@types/bcryptjs": "^2.4.6",
+		"@types/cookie-parser": "^1.4.6",
+		"@types/cors": "^2.8.17",
+		"@types/express": "^4.17.21",
+		"@types/jest": "^29.5.12",
+		"@types/jsonwebtoken": "^9.0.5",
+		"@types/mongoose": "^5.11.97",
+		"@types/morgan": "^1.9.9",
+		"@types/supertest": "^6.0.2",
+		"@typescript-eslint/eslint-plugin": "^6.13.1",
+		"@typescript-eslint/parser": "^6.13.1",
+		"colors": "^1.4.0",
+		"concurrently": "^8.2.2",
+		"cross-env": "^7.0.3",
+		"eslint": "^8.55.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.1",
+		"express-validator": "^7.0.1",
+		"jest": "^29.7.0",
+		"mocha": "^10.2.0",
+		"prettier": "^3.1.0",
+		"supertest": "^6.3.4",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.3.2"
 	},
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
