--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
 	"author": "Edgar Chavero <edieveg316@gmail.com> (https://www.linkedin.com/in/edgar-chavero/)",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^20.11.26",
-		"nodemon": "^3.1.0",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/cookie-parser": "^1.4.6",
 		"@types/cors": "^2.8.17",
@@ -24,6 +22,7 @@
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/mongoose": "^5.11.97",
 		"@types/morgan": "^1.9.9",
+		"@types/node": "^20.11.26",
 		"@types/supertest": "^6.0.2",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
 		"@typescript-eslint/parser": "^6.13.1",
@@ -36,6 +35,7 @@
 		"express-validator": "^7.0.1",
 		"jest": "^29.7.0",
 		"mocha": "^10.2.0",
+		"nodemon": "^3.1.0",
 		"prettier": "^3.1.0",
 		"supertest": "^6.3.4",
 		"ts-node": "^10.9.1",
@@ -49,6 +49,7 @@
 		"express": "^4.18.3",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.2.1",
-		"multer": "^1.4.5-lts.1"
+		"multer": "^1.4.5-lts.1",
+		"winston": "^3.12.0"
 	}
 }
